Bug fix attempt on mobile (maintain scrolling location )

--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,7 @@ h1 {
     height: 40px;
     border: 1px solid rgba(255,255,255,0.5);
     cursor: pointer;
+    z-index: 2;
 
 }
 .toTop:hover {
